welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:13: error: ';' expected but ')' found.
    else{return false)
                     ^